syntax = "proto3";

package enterprise;
option go_package = "github.com/pachyderm/pachyderm/v2/src/enterprise";

import "google/protobuf/timestamp.proto";

// Enterprise data structures

// LicenseRecord is the record we store in etcd for a Pachyderm enterprise
// token that has been provided to a Pachyderm license server
message LicenseRecord {
  string activation_code = 1;

  google.protobuf.Timestamp expires = 2;
}

// EnterpriseRecord is the record we store in etcd for a Pachyderm enterprise
// that is registered with a license server
message EnterpriseRecord {
  string license_server = 1;
  string id = 2;
  string secret = 3;

  google.protobuf.Timestamp last_heartbeat = 4;
  LicenseRecord license = 5;
  bool heartbeat_failed = 6;
}

enum State {
  NONE = 0;
  ACTIVE = 1;
  EXPIRED = 2;
  HEARTBEAT_FAILED = 3;
}

// TokenInfo contains information about the currently active enterprise token
message TokenInfo {
  // expires indicates when the current token expires (unset if there is no
  // current token)
  google.protobuf.Timestamp expires = 1;
}

//// Enterprise Activation API

message ActivateRequest {
  reserved 1,2;

  string license_server = 3;
  string id = 4;
  string secret = 5;
}
message ActivateResponse {}

message GetStateRequest {}

message GetStateResponse {
  State state = 1;
  TokenInfo info = 2;

  // activation_code will always be an empty string,
  // call GetEnterpriseCode to get the activation code
  string activation_code = 3;
}

message GetActivationCodeRequest {}

message GetActivationCodeResponse {
  State state = 1;
  TokenInfo info = 2;
  string activation_code = 3;
}

message DeactivateRequest{}
message DeactivateResponse{}

service API {
  // Provide a Pachyderm enterprise token, enabling Pachyderm enterprise
  // features, such as the Pachyderm Dashboard and Auth system
  rpc Activate(ActivateRequest) returns (ActivateResponse) {}
  rpc GetState(GetStateRequest) returns (GetStateResponse) {}
  rpc GetActivationCode(GetActivationCodeRequest) returns (GetActivationCodeResponse) {}

  // Deactivate removes a cluster's enterprise activation
  // token and sets its enterprise state to NONE.
  rpc Deactivate(DeactivateRequest) returns (DeactivateResponse) {}
}

